Create view has been created

--- a/MVCLogin/MVCLogin.csproj
+++ b/MVCLogin/MVCLogin.csproj
@@ -151,6 +151,7 @@
     <None Include="packages.config" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Login\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
